--- a/index.css
+++ b/index.css
@@ -591,6 +591,30 @@ font-size: 40px;
         font-size: 22vw;
         /* מתאים לכתיבה גדולה וברורה במסכים קטנים */
     }
+
+      .box .img-text {
+        position: relative;
+        top: auto;
+        left: auto;
+        transform: none;
+        opacity: 1;
+        margin-top: -10px;
+        text-align: center;
+        pointer-events: auto;
+        font-size: 20px;
+    
+    background: linear-gradient(180deg, #000000 0%, #00ffd5 50%, #00ff55 100%);
+    -webkit-background-clip: text;
+    color: transparent;
+    text-shadow:
+    0 0 6px rgb(0, 21, 255),
+    0 2px 4px rgba(0, 0, 0, 0.3);
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.6);
+    letter-spacing: 0px;
+    }
+
+    
+ 
 }
 .focus-outline *:focus {
   outline: 3px solid #ff9800 !important;
@@ -599,3 +623,8 @@ font-size: 40px;
   text-decoration: underline !important;
   border-bottom: 2px dashed #000 !important;
 }
+
+
+
+
+/* כשעוברים עם העכבר על התמונה → הכותרת מופיעה */
