--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ body {
   display: none;
   text-align: center;
   color: #ff6200;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 .testimonial.active {
@@ -294,6 +294,20 @@ font-size: 40px;
     margin: 0;
 }
 
+.sec-title-1{
+    font-size: 3vw;
+      font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    background: linear-gradient(180deg, #6383e4 10%, #6383e4 60%, #6383e4 100%);
+    -webkit-background-clip: text;
+    color: transparent;
+   text-shadow:
+   2px 2px 3px rgba(0,0,0,0.25),   /* צל ראשון רך */
+    4px 4px 6px rgba(0,0,0,0.20),   /* צל קצת יותר עמוק */
+    6px 6px 12px rgba(0,0,0,0.15);  /* צל רחוק שנותן עומק */
+    margin: 0;
+}
+
+
 .title-drama{
  font-size: 5vw;
       font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -326,9 +340,12 @@ font-size: 40px;
     text-align: center;
     font-family: "Rubik Maps", sans-serif; 
   font-size: 2rem;
-    color: rgba(250, 78, 78, 0.856);
+    color: rgba(204, 31, 31, 0.856);
     text-shadow: 2px 2px 3px rgb(255, 255, 255);
     font-weight: 900;
+    line-height: 1.8;
+     direction: rtl;
+   
 }
 a.a1, a.a2, a.a3 {
   display: block;
@@ -530,10 +547,22 @@ font-size: 40px;
 }
 
 .sec-title{
-    font-size: 7vw;
+    font-size: 5vw;
       font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     background: linear-gradient(180deg, #ff0000 10%, #ff0000 60%, #ff1100 100%);
     -webkit-background-clip: text;
+    color: transparent;
+   text-shadow:
+   2px 2px 3px rgba(0,0,0,0.25),   /* צל ראשון רך */
+    4px 4px 6px rgba(0,0,0,0.20),   /* צל קצת יותר עמוק */
+    6px 6px 12px rgba(0,0,0,0.15);  /* צל רחוק שנותן עומק */
+    margin: 0;
+    text-align: center;
+}
+.sec-title-1{
+    font-size: 5vw;
+      font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  background: linear-gradient(180deg, #6383e4 10%, #6383e4 60%, #6383e4 100%);    -webkit-background-clip: text;
     color: transparent;
    text-shadow:
    2px 2px 3px rgba(0,0,0,0.25),   /* צל ראשון רך */
@@ -584,23 +613,36 @@ font-size: 40px;
     }
 
       .box .img-text {
-        position: relative;
-        top: auto;
-        left: auto;
-        transform: none;
-        opacity: 1;
-        margin-top: -10px;
-        text-align: center;
-        pointer-events: auto;
-        font-size: 20px;
+              position: relative;
+      top: auto;
+      left: auto;
+      transform: none;
+      opacity: 1;
+      margin-top: -10px;
+      text-align: center;
+      pointer-events: auto;
+
+      /* טקסט רגיל */
+      font-size: 20px;
+      font-family: "Playpen Sans Hebrew", sans-serif;
+      color: #683400;
+
+      /* רקע לבן קבוע */
     
-    background: linear-gradient(180deg, #5f76fc 50%, #755aff 50%, #4e57fd 100%);
-    -webkit-background-clip: text;
-    color: transparent;
-  
-    -webkit-text-stroke: 0px rgba(255, 255, 255, 0.6);
-    letter-spacing: 0px;
+
+      /* ביטול הצללות וגרדיאנטים */
+      text-shadow: none;
+ 
+      -webkit-text-stroke: 0;
     }
+    .testimonial {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display: none;
+  
+  text-align: center;
+  color: #8a3500;
+  font-size: 1.3rem;
+}
 
     
  
