--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
-
-
-
-
+@font-face {
+  font-family: 'GeveretLevin';
+  src: url('GveretLevinAlefAlefAlef-Regular.woff2') format('woff2'),
+       url('GveretLevinAlefAlefAlef-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 
 
 body {
@@ -17,7 +20,8 @@ body {
 }
 .rtl{
     direction: rtl;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      font-family: 'GeveretLevin', sans-serif;
+
     color: rgb(65, 143, 207);
     font-size: 15px
 }
@@ -54,7 +58,8 @@ body {
     border-radius: 20px;
 }
 .testimonial {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     font-family: 'GeveretLevin', sans-serif;
+
     display: none;
     text-align: center;
     color: #692800;
@@ -202,6 +207,10 @@ button.next-btn:hover {
     opacity: 0;
     transform: translateY(10px);
     transition: 0.35s ease;
+    font-family: 'GeveretLevin', sans-serif;
+}
+.fontt{
+    font-family: 'GeveretLevin', sans-serif;
 }
 
 /* בעת פתיחה */
@@ -285,7 +294,8 @@ button.next-btn:hover {
 }
 .phone-call{
     font-size: 3vw;
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+     font-family: 'GeveretLevin', sans-serif;
+
     background: linear-gradient(180deg, #26ff04 10%, #23ad00 60%, #000000 100%);
     -webkit-background-clip: text;
     color: transparent;
@@ -319,7 +329,8 @@ button.next-btn:hover {
 }
 .hamlzot{
     font-size: 3vw;
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      font-family: 'GeveretLevin', sans-serif;
+
     background: linear-gradient(180deg, #ff0000 10%, #ff0000 60%, #ff1100 100%);
     -webkit-background-clip: text;
     color: transparent;
@@ -354,12 +365,11 @@ button.next-btn:hover {
     transition: opacity 0.4s ease, transform 0.4s ease;
     pointer-events: none;
     font-size: 2.5vw;
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    background: linear-gradient(180deg, #000000 0%, #00ffd5 50%, #00ff55 100%);
+    font-family: 'GeveretLevin', sans-serif;
+    font-weight: normal;
+    background: linear-gradient(180deg, #000000 0%, #000000 50%, #002c42 100%);
     -webkit-background-clip: text;
     color: transparent;
-    text-shadow: 0 0 6px rgb(0, 21, 255), 0 2px 4px rgba(0, 0, 0, 0.3);
-    -webkit-text-stroke: 2px rgba(255, 255, 255, 0.6);
     letter-spacing: 0px;
 }
 .box:hover .img-text {
@@ -397,13 +407,13 @@ button.next-btn:hover {
 }
 .balloon-text {
     font-size: 11vw;
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    background: linear-gradient(180deg, #ff0000 100%, #ff0101 100%, #ff0000 100%);
-    -webkit-background-clip: text;
-    color: transparent;
-    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.7);
+      font-family: 'Rubik Doodle Shadow', sans-serif;
+       /* font-family: 'Suez One', serif; */
+       
+      
+
     margin: 0;
-color: rgb(174, 4, 4);
+
 text-align: center;
 margin-bottom: -7vw;
 
@@ -411,20 +421,31 @@ margin-bottom: -7vw;
 .balloon-text1 {
     
     font-size: 11vw;
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    background: linear-gradient(180deg, #ff0000 100%, #ff0101 100%, #ff0000 100%);
+  font-family: 'GeveretLevin', sans-serif;
+  background: linear-gradient(180deg, #000000 100%, #080808 100%, #160000 100%);
     -webkit-background-clip: text;
     color: transparent;
-    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.7);
+     font-weight: normal;
     margin: 0;
     font-size: 7vw;
     margin-top: 50px;
-color: rgb(174, 4, 4);
+    text-shadow: 0px 5px 8px black;
+color: rgb(51, 50, 50);
 text-align: center;
+}
+.letter-wrapper2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -70px;
+    margin-bottom: 50px;
+    font-size: 12vw;
+    color: rgb(238, 63, 0);
 }
 .sec-title {
     font-size: 3vw;
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+     font-family: 'GeveretLevin', sans-serif;
+
     background: linear-gradient(180deg, #ff0000 10%, #ff0101 60%, #ff0000 100%);
     -webkit-background-clip: text;
     color: transparent;
@@ -434,7 +455,8 @@ text-align: center;
 }
 .sec-title-1 {
     font-size: 3vw;
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      font-family: 'GeveretLevin', sans-serif;
+
     background: linear-gradient(180deg, #3c6dff 10%, #546dfc 60%, #5900ff 100%);
     -webkit-background-clip: text;
     color: transparent;
@@ -445,18 +467,20 @@ text-align: center;
 }
 .title-drama {
     font-size: 5vw;
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+     font-family: 'GeveretLevin', sans-serif;
+
     background: linear-gradient(180deg, #ff0000 10%, #ff0000 60%, #ff1100 100%);
     -webkit-background-clip: text;
     color: transparent;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.25), 4px 4px 6px rgba(0,0,0,0.20), 6px 6px 12px rgba(0,0,0,0.15);
     margin: auto;
     text-align: center;
-    margin-top: 200px;
+    
 }
 .end-t {
     font-size: 3vw;
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+     font-family: 'GeveretLevin', sans-serif;
+
     background: linear-gradient(180deg, #ff0000 10%, #ff0000 60%, #ff1100 100%);
     -webkit-background-clip: text;
     color: transparent;
@@ -468,7 +492,8 @@ text-align: center;
 .details-drama{
     text-align: center;
     /* font-family: "Rubik Maps", sans-serif;  */
-font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: 'GeveretLevin', sans-serif;
+
     font-size: 2rem;
     color: rgba(17, 88, 1, 0.856);
     text-shadow: 2px 2px 3px rgb(255, 255, 255);
@@ -486,28 +511,39 @@ a.a1, a.a2, a.a3 {
 a.a1:hover, a.a2:hover, a.a3:hover {
     transform: scale(1.04);
 }
+.letter-wrapperr{
+    position: relative;
+    display: inline-block;
+    direction: rtl;
+    margin-bottom: -200px;
+    font-size: 8vw;
+    color: rgb(65, 143, 207);
+}
 .letter-wrapper {
     position: relative;
     display: inline-block;
     direction: rtl;
     margin-bottom: -200px;
+    font-size: 5vw;
 }
+
+
 
 .letter-wrapper1 {
     position: relative;
     display: inline-block;
     direction: rtl;
-  
+   font-size: 5vw;
     margin-top: -150px;
 }
 .letter-wrapper .ball, .letter-wrapper .ball2 {
     position: absolute;
     top: 0em;
-    margin-right: -15px;
-    margin-top: -25px;
+    margin-right: -24px;
+    margin-top: -20px;
     transform: translateX(-50%);
     width: 0em;
-    font-size: 45px;
+    font-size: 30px;
     background: rgb(113, 134, 230); ;
     height: 0.1em;
     border-radius: 50%;
@@ -582,20 +618,21 @@ a.a1:hover, a.a2:hover, a.a3:hover {
     background: #58a3ff;
     color: white;
     font-size: 1.1rem;
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    border: none;
+      font-family: 'GeveretLevin', sans-serif;
+
     cursor: pointer;
     transition: 0.3s;
   
 }
 .hebrw{
     direction: rtl;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: 'GeveretLevin', sans-serif;
 
 }
 .ss{
     font-size: 18px;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: 'GeveretLevin', sans-serif;
+
 
 }
 .dad-box{
@@ -716,7 +753,7 @@ a.a1:hover, a.a2:hover, a.a3:hover {
     .dadCon { flex-wrap: wrap; justify-content: center; margin-top: 40px; margin-bottom: 40px; }
     .img1, .img2, .img3 { width: 200px; height: 200px; margin-bottom: 20px; }
     .sec-title, .sec-title-1 { font-size: 5vw; }
-    .title-drama { font-size: 8vw; }
+    .title-drama { font-size: 8vw;}
     .phone-call { font-size: 7vw; }
     .end-t { font-size: 4vw; }
     .box .img-text {
@@ -729,8 +766,8 @@ a.a1:hover, a.a2:hover, a.a3:hover {
         text-align: center;
         pointer-events: auto;
         font-size: 20px;
-        font-family: "Playpen Sans Hebrew", sans-serif;
-        color: #683400;
+ font-family: 'GeveretLevin', sans-serif;
+         color: #683400;
         text-shadow: none;
         -webkit-text-stroke: 0;
     }
@@ -744,7 +781,7 @@ a.a1:hover, a.a2:hover, a.a3:hover {
     .dadCon { flex-wrap: wrap; margin-top: 20px; margin-bottom: 20px; }
     .img1, .img2, .img3 { width: 150px; height: 150px; }
     .sec-title, .sec-title-1 { font-size: 6vw; }
-    .title-drama { font-size: 9vw; }
+    .title-drama { font-size: 9vw; margin-top: 200px;}
     .phone-call { font-size: 8vw; }
     .end-t { font-size: 5vw; }
      .testimonial-modal {
@@ -762,7 +799,8 @@ a.a1:hover, a.a2:hover, a.a3:hover {
     
     font-size: 13vw;
     
-    font-family: "Playpen Sans Hebrew", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      font-family: 'GeveretLevin', sans-serif;
+
     background: linear-gradient(180deg, #ff0000 100%, #ff0101 100%, #ff0000 100%);
     -webkit-background-clip: text;
     color: transparent;
@@ -777,11 +815,11 @@ text-align: center;
 .letter-wrapper .ball, .letter-wrapper .ball2 {
     position: absolute;
     top: 0em;
-    margin-right: -11px;
-    margin-top: -18px;
+    margin-right: -16px;
+    margin-top: -21px;
     transform: translateX(-50%);
     width: 0em;
-    font-size: 25px;
+    font-size: 20px;
     background: rgb(113, 134, 230); ;
     height: 0.1em;
     border-radius: 50%;
@@ -793,9 +831,17 @@ text-align: center;
     position: relative;
     display: inline-block;
     direction: rtl;
-    
-    margin-top: -150px;
+    font-size: 10vw;
+    margin-top: -100px;
 }
+.letter-wrapper {
+    position: relative;
+    display: inline-block;
+    direction: rtl;
+    margin-bottom: -200px;
+    font-size: 10vw;
+}
+
 
     .testimonial-carousel {
         flex-direction: column;   /* המלצות אחד מתחת לשני אם צריך */
@@ -821,9 +867,28 @@ text-align: center;
     }
     .rtl{
         direction: rtl;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        margin: auto;
+ font-family: 'GeveretLevin', sans-serif;
+         margin: auto;
     }
+    .letter-wrapper2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -120px;
+    margin-bottom: 50px;
+    font-size: 25vw;
+    color: rgb(238, 63, 0);
+}
+    .letter-wrapperr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 7px;
+    margin-bottom: 1px;
+    font-size: 18vw;
+    color:#007bff
+}
+    
 }
 
 
