--- a/index.css
+++ b/index.css
@@ -474,7 +474,7 @@ text-align: center;
     font-size: 5vw;
      font-family: 'GeveretLevin', sans-serif;
     width: 100%;
-    background: linear-gradient(180deg, #ff0000 10%, #ff0000 60%, #ff1100 100%);
+    background: linear-gradient(180deg, #007bff  10%, #007bff  60%, #007bff  100%);
     -webkit-background-clip: text;
     color: transparent;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.25), 4px 4px 6px rgba(0,0,0,0.20), 6px 6px 12px rgba(0,0,0,0.15);
@@ -486,10 +486,9 @@ text-align: center;
     font-size: 3vw;
      font-family: 'GeveretLevin', sans-serif;
 
-    background: linear-gradient(180deg, #ff0000 10%, #ff0000 60%, #ff1100 100%);
+    background: #b00808;
     -webkit-background-clip: text;
     color: transparent;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.25), 4px 4px 6px rgba(0,0,0,0.20), 6px 6px 12px rgba(0,0,0,0.15);
     margin: auto;
     text-align: center;
     direction: rtl;
