--- a/index.css
+++ b/index.css
@@ -485,7 +485,7 @@ text-align: center;
     font-size: 3vw;
      font-family: 'GeveretLevin', sans-serif;
 
-    background: #b00808;
+    background: #ffe100;
     -webkit-background-clip: text;
     color: transparent;
     margin: auto;
